# neon-sakura-studio

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md  STATUS.md
source/: AudioEngine.cpp  AudioEngine.h  DockablePanel.cpp  DockablePanel.h  DockingManager.cpp  DockingManager.h  ISampleProvider.h  ITrackDataProvider.h  Main.cpp  MainComponent.cpp  MainComponent.h  MainComponentExtension.cpp  MainComponentExtension.h  MelodyGenerator.cpp  MelodyGenerator.h  MelodyPanel.cpp  MelodyPanel.h  MidiEventQueue.h  MusicTheory.cpp  MusicTheory.h  PanelManager.cpp  PanelManager.h  PatternGenerator.cpp  PatternGenerator.h  PlaybackController.cpp  PlaybackController.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RhythmExplorer.cpp  RhythmExplorer.h  SampleManager.cpp  SampleManager.h  TrackAudioProcessor.cpp  TrackAudioProcessor.h  TrackComponent.cpp  TrackComponent.h  TrackManager.cpp  TrackManager.h  (+4 more)
source/AudioRouting/: AudioRoutingGraph.cpp  AudioRoutingGraph.h  CPUProfiler.cpp  CPUProfiler.h  DelayLine.h  IAudioSource.h  MIDIOutputHandler.cpp  MIDIOutputHandler.h  MasterOutputProcessor.cpp  MasterOutputProcessor.h  PluginParameterAutomation.cpp  PluginParameterAutomation.h  SidechainManager.cpp  SidechainManager.h  TrackProcessor.cpp  TrackProcessor.h
source/InternalSynth/: InternalSynthEditor.cpp  InternalSynthEditor.h  InternalSynthProcessor.cpp  InternalSynthProcessor.h
source/MelodyPanel/: MelodyPanel.cpp  MelodyPanel.h  MelodyPanelPanel.cpp  MelodyPanelPanel.h
source/Modulation/: EnvelopeModulator.cpp  EnvelopeModulator.h  LFOModulator.cpp  LFOModulator.h  ModulationMatrix.cpp  ModulationMatrix.h  ModulationSource.h  Modulator.cpp  Modulator.h
source/RhythmExplorer/: RhythmExplorer.h  RhythmExplorerPanel.cpp  RhythmExplorerPanel.h
source/Sequencer/: PatternViewComponent.cpp  PatternViewComponent.h  TimelineViewComponent.cpp  TimelineViewComponent.h  TrackViewComponent.cpp  TrackViewComponent.h  UnifiedSequencerModel.cpp  UnifiedSequencerModel.h  UnifiedSequencerPanel.cpp  UnifiedSequencerPanel.h
source/StepSequencer/: NeonStepButton.cpp  NeonStepButton.h  StepSequencerClip.cpp  StepSequencerClip.h  StepSequencerPanel.cpp  StepSequencerPanel.h
source/Testing/: TestCoordinator.cpp  TestCoordinator.h
source/Theme/: ExtendedThemeSystem.cpp  ExtendedThemeSystem.h  ProfessionalLookAndFeel.cpp  ProfessionalLookAndFeel.h  ProfessionalTheme.h  ThemeManager.cpp  ThemeManager.h  WorkspaceManager.cpp  WorkspaceManager.h  WorkspacePreset.cpp  WorkspacePreset.h
source/Timeline/: AutomationClip.cpp  AutomationClip.h  AutomationLane.cpp  AutomationLane.h  PatternToClipConverter.cpp  PatternToClipConverter.h  RecordingManager.cpp  RecordingManager.h  TimelineClip.cpp  TimelineClip.h  TimelineComponent.cpp  TimelineComponent.h  TimelineData.cpp  TimelineData.h  TimelinePanel.cpp  TimelinePanel.h  TimelinePlayHead.cpp  TimelinePlayHead.h  TimelineRenderer.cpp  TimelineRenderer.h  TimelineTrack.h  TimelineTransport.cpp  TimelineTransport.h  TimelineViewport.cpp  TimelineViewport.h
source/UI/: AdvancedModulationPanel.cpp  AdvancedModulationPanel.h  EnhancedPanelHeader.cpp  EnhancedPanelHeader.h  EnhancedPluginChainEditor.cpp  EnhancedPluginChainEditor.h  FloatingPanelBase.cpp  FloatingPanelBase.h  FloatingPanelEnums.h  GlobalControlsBar.cpp  GlobalControlsBar.h  MasterBusPanel.cpp  MasterBusPanel.h  PanelAnimator.cpp  PanelAnimator.h  PanelFeedbackSystem.cpp  PanelFeedbackSystem.h  PanelGlassEffect.cpp  PanelGlassEffect.h  PanelTogglesBar.cpp  PanelTogglesBar.h  PluginChainEditor.cpp  PluginChainEditor.h  RoutingMatrixPanel.cpp  RoutingMatrixPanel.h  SidechainRoutingPanel.cpp  SidechainRoutingPanel.h  SynthWorkspacePanel.cpp  SynthWorkspacePanel.h  TabbedPanelContainer.cpp  TabbedPanelContainer.h  TrackHeader.cpp  TrackHeader.h  TrackToolsBar.cpp  TrackToolsBar.h  TransportBar.cpp  TransportBar.h  WorkspacePresetUI.cpp  WorkspacePresetUI.h  ZoneSnapManager.cpp  (+1 more)
source/VSTHost/: PluginBrowserComponent.cpp  PluginBrowserComponent.h  PluginHostConfiguration.h  PluginInstance.cpp  PluginInstance.h  PluginLoadingCoordinator.cpp  PluginLoadingCoordinator.h  PluginSandbox.cpp  PluginSandbox.h  PluginScanner.cpp  PluginScanner.h  PluginWindow.cpp  PluginWindow.h  PluginWindow_clean.cpp  VSTPluginManager.cpp  VSTPluginManager.h
source/WavetableSynth/: SubOscillator.cpp  SubOscillator.h  Waveshaper.cpp  Waveshaper.h  WavetableData.cpp  WavetableData.h  WavetableEngine.cpp  WavetableEngine.h  WavetableFilter.cpp  WavetableFilter.h  WavetableOscillator.cpp  WavetableOscillator.h  WavetableParams.cpp  WavetableParams.h  WavetablePreset.h  WavetablePresetManager.cpp  WavetablePresetManager.h  WavetableSynth.cpp  WavetableSynth.h  WavetableVoice.cpp  WavetableVoice.h
source/WavetableUI/: EnvelopeSection.cpp  EnvelopeSection.h  FXSection.cpp  FXSection.h  FilterSection.cpp  FilterSection.h  ModulationGrid.cpp  ModulationGrid.h  ModulationSection.cpp  ModulationSection.h  NeonSakuraLookAndFeel.cpp  NeonSakuraLookAndFeel.h  OscillatorSection.cpp  OscillatorSection.h  Oscilloscope.cpp  Oscilloscope.h  ShaperSection.cpp  ShaperSection.h  WavetableDisplay.cpp  WavetableDisplay.h  WavetablePanel.cpp  WavetablePanel.h  WavetableSynthEditor.cpp  WavetableSynthEditor.h  WootingSettingsPanel.cpp  WootingSettingsPanel.h
